--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Prata&family=Raleway:ital,wght@0,100..900;1,100..900&family=Sofadi+One&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,3 +6,12 @@
     background-color: green;
     color: white;
   }
+*{
+  font-family: Outfit;
+}
+  .prata-regular {
+    font-family: "Prata", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
