--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Prata&family=Raleway:ital,wght@0,100..900;1,100..900&family=Sofadi+One&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    font-family: "Open Sans", sans-serif;
+
+  }
+.active{
+    background-color: #ffebf5;
+    border-color: #c586A5;
+}
